# fmnist-esp-ota

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.internal  sdkconfig.defaults.psram  tcp_image_server.py
components/tfmicro/: CMakeLists.txt
main/: CMakeLists.txt
main/inc/: DataProvider.h  PredictionHandler.h  PredictionInterpreter.h  config.h  http_server.h  main_functions.h  micro_model.h  micro_ops.h  tcp_server.h  wifi.h
main/src/: DataProvider.cpp  PredictionHandler.cpp  PredictionInterpreter.cpp  http_server.c  main.cpp  main_functions.cpp  micro_ops.cpp  tcp_server.c  wifi.c
models/: mobilenet_frozen_quantized_int8.tflite  resnet10_frozen_quantized_int8.tflite  resnet8_frozen.tflite  resnet_tf_frozen_with_representative_dataset_micro_model.cpp  simple_cnn_tf_frozen.tflite  simple_cnn_tf_frozen_with_representative_dataset_micro_model.cpp
scripts/: assemble_firmware.sh  env.sh  esp32_model_deploy_helper.py  flasher.sh  prebuild.sh  ptmaker.sh  setup_env.sh  sync_from_tflite_micro.sh  tcp_image_client.py  tcp_image_server.py  temp_venv_runner.sh  tflite_micro_helper.py
